src/Hack/Parsers/ILParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.11.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\IL.g4 by ANTLR 4.11.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.11.1")]
public partial class ILParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, UINT=26, NAME=27, COMMENT=28, WS=29;
	public const int
		RULE_program = 0, RULE_command = 1;
	public static readonly string[] ruleNames = {
		"program", "command"
	};

	private static readonly string[] _LiteralNames = {
		null, "'call'", "'function'", "'return'", "'if-goto'", "'goto'", "'label'", 
		"'push'", "'local'", "'argument'", "'this'", "'that'", "'pointer'", "'temp'", 
		"'constant'", "'static'", "'pop'", "'add'", "'sub'", "'neg'", "'eq'", 
		"'gt'", "'lt'", "'and'", "'or'", "'not'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "UINT", "NAME", "COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "IL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static ILParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ILParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ILParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 5;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 4;
				command();
				}
				}
				State = 7;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( ((_la) & ~0x3f) == 0 && ((1L << _la) & 67043582L) != 0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
	 
		public CommandContext() { }
		public virtual void CopyFrom(CommandContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SubContext : CommandContext {
		public SubContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterSub(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitSub(this);
		}
	}
	public partial class PushThisContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushThisContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushThis(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushThis(this);
		}
	}
	public partial class PopLocalContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopLocalContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopLocal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopLocal(this);
		}
	}
	public partial class PopPointerContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopPointerContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopPointer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopPointer(this);
		}
	}
	public partial class LtContext : CommandContext {
		public LtContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterLt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitLt(this);
		}
	}
	public partial class IfGotoContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ILParser.NAME, 0); }
		public IfGotoContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterIfGoto(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitIfGoto(this);
		}
	}
	public partial class PushLocalContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushLocalContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushLocal(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushLocal(this);
		}
	}
	public partial class NegContext : CommandContext {
		public NegContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterNeg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitNeg(this);
		}
	}
	public partial class NotContext : CommandContext {
		public NotContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterNot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitNot(this);
		}
	}
	public partial class GotoContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ILParser.NAME, 0); }
		public GotoContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterGoto(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitGoto(this);
		}
	}
	public partial class PushArgumentContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushArgumentContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushArgument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushArgument(this);
		}
	}
	public partial class PushTempContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushTempContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushTemp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushTemp(this);
		}
	}
	public partial class PushConstantContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushConstantContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushConstant(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushConstant(this);
		}
	}
	public partial class AndContext : CommandContext {
		public AndContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterAnd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitAnd(this);
		}
	}
	public partial class FunctionContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ILParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public FunctionContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}
	public partial class PopArgumentContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopArgumentContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopArgument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopArgument(this);
		}
	}
	public partial class PopStaticContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopStaticContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopStatic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopStatic(this);
		}
	}
	public partial class AddContext : CommandContext {
		public AddContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterAdd(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitAdd(this);
		}
	}
	public partial class PushStaticContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushStaticContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushStatic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushStatic(this);
		}
	}
	public partial class OrContext : CommandContext {
		public OrContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterOr(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitOr(this);
		}
	}
	public partial class LabelContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ILParser.NAME, 0); }
		public LabelContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
	}
	public partial class EqContext : CommandContext {
		public EqContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterEq(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitEq(this);
		}
	}
	public partial class PushPointerContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushPointerContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushPointer(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushPointer(this);
		}
	}
	public partial class PopThatContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopThatContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopThat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopThat(this);
		}
	}
	public partial class GtContext : CommandContext {
		public GtContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterGt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitGt(this);
		}
	}
	public partial class CallContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NAME() { return GetToken(ILParser.NAME, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public CallContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterCall(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitCall(this);
		}
	}
	public partial class PopTempContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopTempContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopTemp(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopTemp(this);
		}
	}
	public partial class PushThatContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PushThatContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPushThat(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPushThat(this);
		}
	}
	public partial class PopThisContext : CommandContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(ILParser.UINT, 0); }
		public PopThisContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterPopThis(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitPopThis(this);
		}
	}
	public partial class ReturnContext : CommandContext {
		public ReturnContext(CommandContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.EnterReturn(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IILListener typedListener = listener as IILListener;
			if (typedListener != null) typedListener.ExitReturn(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 2, RULE_command);
		try {
			State = 76;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				_localctx = new CallContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 9;
				Match(T__0);
				State = 10;
				Match(NAME);
				State = 11;
				Match(UINT);
				}
				break;
			case 2:
				_localctx = new FunctionContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 12;
				Match(T__1);
				State = 13;
				Match(NAME);
				State = 14;
				Match(UINT);
				}
				break;
			case 3:
				_localctx = new ReturnContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 15;
				Match(T__2);
				}
				break;
			case 4:
				_localctx = new IfGotoContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 16;
				Match(T__3);
				State = 17;
				Match(NAME);
				}
				break;
			case 5:
				_localctx = new GotoContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 18;
				Match(T__4);
				State = 19;
				Match(NAME);
				}
				break;
			case 6:
				_localctx = new LabelContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 20;
				Match(T__5);
				State = 21;
				Match(NAME);
				}
				break;
			case 7:
				_localctx = new PushLocalContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 22;
				Match(T__6);
				State = 23;
				Match(T__7);
				State = 24;
				Match(UINT);
				}
				break;
			case 8:
				_localctx = new PushArgumentContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 25;
				Match(T__6);
				State = 26;
				Match(T__8);
				State = 27;
				Match(UINT);
				}
				break;
			case 9:
				_localctx = new PushThisContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 28;
				Match(T__6);
				State = 29;
				Match(T__9);
				State = 30;
				Match(UINT);
				}
				break;
			case 10:
				_localctx = new PushThatContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 31;
				Match(T__6);
				State = 32;
				Match(T__10);
				State = 33;
				Match(UINT);
				}
				break;
			case 11:
				_localctx = new PushPointerContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 34;
				Match(T__6);
				State = 35;
				Match(T__11);
				State = 36;
				Match(UINT);
				}
				break;
			case 12:
				_localctx = new PushTempContext(_localctx);
				EnterOuterAlt(_localctx, 12);
				{
				State = 37;
				Match(T__6);
				State = 38;
				Match(T__12);
				State = 39;
				Match(UINT);
				}
				break;
			case 13:
				_localctx = new PushConstantContext(_localctx);
				EnterOuterAlt(_localctx, 13);
				{
				State = 40;
				Match(T__6);
				State = 41;
				Match(T__13);
				State = 42;
				Match(UINT);
				}
				break;
			case 14:
				_localctx = new PushStaticContext(_localctx);
				EnterOuterAlt(_localctx, 14);
				{
				State = 43;
				Match(T__6);
				State = 44;
				Match(T__14);
				State = 45;
				Match(UINT);
				}
				break;
			case 15:
				_localctx = new PopLocalContext(_localctx);
				EnterOuterAlt(_localctx, 15);
				{
				State = 46;
				Match(T__15);
				State = 47;
				Match(T__7);
				State = 48;
				Match(UINT);
				}
				break;
			case 16:
				_localctx = new PopArgumentContext(_localctx);
				EnterOuterAlt(_localctx, 16);
				{
				State = 49;
				Match(T__15);
				State = 50;
				Match(T__8);
				State = 51;
				Match(UINT);
				}
				break;
			case 17:
				_localctx = new PopThisContext(_localctx);
				EnterOuterAlt(_localctx, 17);
				{
				State = 52;
				Match(T__15);
				State = 53;
				Match(T__9);
				State = 54;
				Match(UINT);
				}
				break;
			case 18:
				_localctx = new PopThatContext(_localctx);
				EnterOuterAlt(_localctx, 18);
				{
				State = 55;
				Match(T__15);
				State = 56;
				Match(T__10);
				State = 57;
				Match(UINT);
				}
				break;
			case 19:
				_localctx = new PopPointerContext(_localctx);
				EnterOuterAlt(_localctx, 19);
				{
				State = 58;
				Match(T__15);
				State = 59;
				Match(T__11);
				State = 60;
				Match(UINT);
				}
				break;
			case 20:
				_localctx = new PopTempContext(_localctx);
				EnterOuterAlt(_localctx, 20);
				{
				State = 61;
				Match(T__15);
				State = 62;
				Match(T__12);
				State = 63;
				Match(UINT);
				}
				break;
			case 21:
				_localctx = new PopStaticContext(_localctx);
				EnterOuterAlt(_localctx, 21);
				{
				State = 64;
				Match(T__15);
				State = 65;
				Match(T__14);
				State = 66;
				Match(UINT);
				}
				break;
			case 22:
				_localctx = new AddContext(_localctx);
				EnterOuterAlt(_localctx, 22);
				{
				State = 67;
				Match(T__16);
				}
				break;
			case 23:
				_localctx = new SubContext(_localctx);
				EnterOuterAlt(_localctx, 23);
				{
				State = 68;
				Match(T__17);
				}
				break;
			case 24:
				_localctx = new NegContext(_localctx);
				EnterOuterAlt(_localctx, 24);
				{
				State = 69;
				Match(T__18);
				}
				break;
			case 25:
				_localctx = new EqContext(_localctx);
				EnterOuterAlt(_localctx, 25);
				{
				State = 70;
				Match(T__19);
				}
				break;
			case 26:
				_localctx = new GtContext(_localctx);
				EnterOuterAlt(_localctx, 26);
				{
				State = 71;
				Match(T__20);
				}
				break;
			case 27:
				_localctx = new LtContext(_localctx);
				EnterOuterAlt(_localctx, 27);
				{
				State = 72;
				Match(T__21);
				}
				break;
			case 28:
				_localctx = new AndContext(_localctx);
				EnterOuterAlt(_localctx, 28);
				{
				State = 73;
				Match(T__22);
				}
				break;
			case 29:
				_localctx = new OrContext(_localctx);
				EnterOuterAlt(_localctx, 29);
				{
				State = 74;
				Match(T__23);
				}
				break;
			case 30:
				_localctx = new NotContext(_localctx);
				EnterOuterAlt(_localctx, 30);
				{
				State = 75;
				Match(T__24);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
